--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "mattermost-desktop",
-  "productName": "Mattermost",
-  "version": "5.9.0-develop.1",
-  "description": "Mattermost",
+  "productName": "ECI",
+  "version": "1.0.0",
+  "description": "ECI",
   "main": "dist/index.js",
   "author": "Mattermost, Inc. <feedback@mattermost.com>",
   "license": "Apache-2.0",
-  "desktopName": "Mattermost.Desktop",
+  "desktopName": "com.nxtchat.eci.desktop",
   "homepage": "https://mattermost.com",
   "engines": {
     "node": ">=18.0.0"
@@ -153,8 +153,8 @@
     "copy-webpack-plugin": "10.2.4",
     "cross-env": "7.0.3",
     "css-loader": "6.7.1",
-    "electron": "29.3.0",
-    "electron-builder": "24.13.3",
+    "electron": "^29.3.0",
+    "electron-builder": "^24.13.3",
     "electron-connect": "0.6.3",
     "electron-mocha": "12.2.0",
     "eslint": "8.57.0",
@@ -181,7 +181,7 @@
     "robotjs": "0.6.0",
     "sass": "1.49.11",
     "sass-loader": "12.6.0",
-    "semver": "7.6.0",
+    "semver": "^7.6.0",
     "style-loader": "3.3.1",
     "ts-prune": "0.10.3",
     "typescript": "5.3.3",
